--- a/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Reservaciones.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Reservaciones.razor
@@ -24,7 +24,7 @@
                             <div class="input-group">
                                 <InputNumber @bind-Value="reservacion.ReservacionId" class="form-control col-4" />
                                 <div class="input-group-append">
-                                    @*<button type="button" class="btn btn-primary input-group-text" @onclick="Buscar">Buscar</button>*@
+                                    <button type="button" class="btn btn-primary input-group-text" @onclick="Buscar">Buscar</button>
                                 </div>
                             </div>
                         </div>
@@ -39,10 +39,10 @@
                         <div class="input-group">
                             <select class="form-control" @bind="Filtro">
                                 <option value="0">Todo</option>
-                                <option value="1">Simple</option>
+                                <option value="1">Individual</option>
                                 <option value="2">Doble</option>
-                                <option value="3">Suite</option>
-                                <option value="4">Deluxe</option>
+                                <option value="3">Suite Máster</option>
+                                <option value="4">Suite Junior</option>
                             </select>
                             <div class="input-group-append">
                                 <button type="button" class="btn btn-primary input-group-text" @onclick="@(u => Consultar())"><i class="oi oi-list-rich" /> Consultar</button>
@@ -65,15 +65,17 @@
                             </tr>
                         </thead>
                         <tbody class="bg-white">
-                            @foreach (var item in ListaHabitacion)
+                            @for (int i = 0; i < ListaHabitacion.Count; i++)
                             {
+                                int index = i;
                                 <tr>
-                                    <td>@item.NumeroHabitacion</td>
-                                    <td>@item.Tipo</td>
-                                    <td>@item.Caracteriscas</td>
-                                    <td>@item.Precio</td>
-                                    <td>@item.Estado</td>
-                                    <td><img src="@item.Foto" style="height:80px;width:80px" /></td>
+                                    <td>@ListaHabitacion[i].NumeroHabitacion</td>
+                                    <td>@ListaHabitacion[i].Tipo</td>
+                                    <td>@ListaHabitacion[i].Caracteriscas</td>
+                                    <td>@ListaHabitacion[i].Precio</td>
+                                    <td>@ListaHabitacion[i].Estado</td>
+                                    <td><img src="@ListaHabitacion[i].Foto" style="height:80px;width:80px" /></td>
+                                    <td><button type="button" class="btn btn-lg btn-primary" @onclick="(() => Seleccionar(i))"> Seleccionar</button><input type="checkbox" @bind="Seleccion[i]" class="form-check-input col-1" /></td>
                                 </tr>
                             }
                         </tbody>
@@ -147,20 +149,19 @@
                         </tbody>
                     </table>
                 </div>
-                @*
-        <div class="form-group">
-            <label>Monto:</label>
-            <InputNumber @bind-Value="Rese.Monto" class="form-control" readonly="true" />
-            <ValidationMessage For="@(() => Compra.Monto)" />
-        </div>
-                *@
+
+                <div class="form-group">
+                    <label>Balance:</label>
+                    <InputNumber @bind-Value="reservacion.Balance" class="form-control" readonly="true" />
+                    <ValidationMessage For="@(() => reservacion.Balance)" />
+                </div>
             </form>
         </div>
         <div class="card-footer">
             <div class="form-group text-center" display: inline-block>
                 <button type="button" class="btn btn-lg btn-primary oi oi-file" @onclick="Nuevo"> Nuevo</button>
                 <button type="submit" class="btn btn-lg btn-success oi oi-cloud-upload" @onclick="Guardar"> Guardar</button>
-                @*<button type="button" class="btn btn-lg btn-danger oi oi-trash" @onclick="Eliminar"> Eliminar</button>*@
+                <button type="button" class="btn btn-lg btn-danger oi oi-trash" @onclick="Eliminar"> Eliminar</button>
             </div>
         </div>
     </div>
@@ -175,8 +176,10 @@
     public string Filtro { get; set; }
 
     Reservaciones reservacion = new Reservaciones();
+    Habitacion habitacion = new Habitacion();
 
     private List<Habitacion> ListaHabitacion { get; set; }
+    private List<bool> Seleccion { get; set; }
 
     protected override void OnInitialized()
     {
@@ -187,23 +190,24 @@
     {
         reservacion = new Reservaciones();
         ListaHabitacion = new List<Habitacion>();
+        Seleccion = new List<bool>();
     }
 
-    //private async Task Buscar()
-    //{
-    //    ////var respuesta = await Http.GetFromJsonAsync<Habitacion>($"http://localhost:5000/Api/Habitacion/{habitacion.HabitacionId}");
+    private async Task Buscar()
+    {
+        var respuesta = await Http.GetFromJsonAsync<Reservaciones>($"http://localhost:5000/Api/Reservacion/{reservacion.ReservacionId}");
 
-    //    //if (respuesta.HabitacionId == 0)
-    //    //{
-    //    //    Nuevo();
-    //    //    toast.ShowWarning("Habitación no encontrada");
-    //    //}
-    //    //else
-    //    //{
-    //    //    reservacion = respuesta;
-    //    //}
+        if (respuesta.ReservacionId == 0)
+        {
+            Nuevo();
+            toast.ShowWarning("Reservación no encontrada");
+        }
+        else
+        {
+            reservacion = respuesta;
+        }
 
-    //}
+    }
 
     public async Task Consultar()
     {
@@ -215,23 +219,36 @@
             case "0":
                 break;
             case "1":
-                ListaHabitacion = ListaHabitacion.Where(h => h.Tipo == "Simple").ToList();
+                ListaHabitacion = ListaHabitacion.Where(h => h.Tipo == "Individual").ToList();
                 break;
             case "2":
                 ListaHabitacion = ListaHabitacion.Where(h => h.Tipo == "Doble").ToList();
                 break;
             case "3":
-                ListaHabitacion = ListaHabitacion.Where(h => h.Tipo == "Suite").ToList();
+                ListaHabitacion = ListaHabitacion.Where(h => h.Tipo == "Suite Máster").ToList();
                 break;
             case "4":
-                ListaHabitacion = ListaHabitacion.Where(h => h.Tipo == "Deluxe").ToList();
+                ListaHabitacion = ListaHabitacion.Where(h => h.Tipo == "Suite Junior").ToList();
                 break;
         }
     }
 
+    public void Seleccionar(int index)
+    {
+        //for(int i = 0; i < Seleccion.Count(); i++)
+        //{
+        //    if (Seleccion[i] == true)
+        //        Seleccion[i] = false;
+        //}
+
+        //Seleccion[index] = true;
+
+        //habitacion = ListaHabitacion[index];
+    }
+
     private async Task Guardar()
     {
-        var guardado = await Http.PostAsJsonAsync("http://localhost:5000/Api/Habitacion", reservacion);
+        var guardado = await Http.PostAsJsonAsync("http://localhost:5000/Api/Reservacion", reservacion);
 
         var estado = await guardado.Content.ReadFromJsonAsync<bool>();
 
@@ -245,18 +262,18 @@
 
     }
 
-    //private async Task Eliminar()
-    //{
-    //    //var respuesta = await Http.PostAsJsonAsync($"http://localhost:5000/Api/Habitacion/{habitacion.HabitacionId}",reservacion.ReservacionId);
+    private async Task Eliminar()
+    {
+        var respuesta = await Http.PostAsJsonAsync($"http://localhost:5000/Api/Reservacion/{reservacion.ReservacionId}", reservacion.ReservacionId);
 
-    //    //var estado = await respuesta.Content.ReadFromJsonAsync<bool>();
+        var estado = await respuesta.Content.ReadFromJsonAsync<bool>();
 
-    //    //if (estado)
-    //    //{
-    //    //    toast.ShowSuccess("Eliminado correctamente");
-    //    //    Nuevo();
-    //    //}
-    //    //else
-    //    //    toast.ShowError("No fue posible eliminar");
-    //}
+        if (estado)
+        {
+            toast.ShowSuccess("Eliminado correctamente");
+            Nuevo();
+        }
+        else
+            toast.ShowError("No fue posible eliminar");
+    }
 }
