--- a/SweetDreams/SweetDreams.Admin/Shared/NavMenu.razor
+++ b/SweetDreams/SweetDreams.Admin/Shared/NavMenu.razor
@@ -18,6 +18,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="RHabitacion">Habitación</a>
                     <a class="dropdown-item" href="RReservaciones">Reservaciones</a>
+                    <a class="dropdown-item" href="RClientes">Clientes</a>
                 </div>
             </li>
             <li class="nav-item dropdown active">
@@ -26,6 +27,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="CHabitacion">Habitación</a>
+                    <a class="dropdown-item" href="CClientes">Clientes</a>
                 </div>
             </li>
         </ul>
