--- a/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Clientes.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Clientes.razor
@@ -100,8 +100,8 @@
                     try
                     {
                         int id = Convert.ToInt32(Criterio);
-                        //ListaUsuarios = UsuariosBLL.GetList(u => u.UsuarioId == id);
-                        ListaClientes = (await Http.GetFromJsonAsync<Clientes[]>($"http://localhost:5000/Api/Clientes")).ToList();
+                        ListaClientes = (await Http.GetFromJsonAsync<Clientes[]>($"http://localhost:5000/Api/Clientes/{Criterio}")).ToList();
+                        ListaClientes = ListaClientes.Where(c => c.ClienteId == id).ToList();
                     }
                     catch (FormatException)
                     {
@@ -110,14 +110,58 @@
                 }
                 else
                 {
-                    //ListaUsuarios = UsuariosBLL.GetList(u => true).OrderBy(u => u.UsuarioId).ToList();
+                    ListaClientes = (await Http.GetFromJsonAsync<Clientes[]>($"http://localhost:5000/Api/Clientes/{Criterio}")).ToList();
+                    ListaClientes = ListaClientes.Where(c => true).OrderBy(c => c.ClienteId).ToList();
+                }
+                break;
+            case "2"://Nombres
+                if (Criterio.Trim().Length > 0)
+                {
+                    ListaClientes = (await Http.GetFromJsonAsync<Clientes[]>($"http://localhost:5000/Api/Clientes/{Criterio}")).ToList();
+                    ListaClientes = ListaClientes.Where(c => c.Nombres.Contains(Criterio)).ToList();
+                }
+                else
+                {
+                    ListaClientes = (await Http.GetFromJsonAsync<Clientes[]>($"http://localhost:5000/Api/Clientes/{Criterio}")).ToList();
+                    ListaClientes = ListaClientes.Where(c => true).OrderBy(c => c.Nombres).ToList();
+                }
+                break;
+            case "3"://Telefono
+                if (Criterio.Trim().Length > 0)
+                {
+                    ListaClientes = (await Http.GetFromJsonAsync<Clientes[]>($"http://localhost:5000/Api/Clientes/{Criterio}")).ToList();
+                    ListaClientes = ListaClientes.Where(c => c.Telefono.Contains(Criterio)).ToList();
+                }
+                else
+                {
+                    ListaClientes = (await Http.GetFromJsonAsync<Clientes[]>($"http://localhost:5000/Api/Clientes/{Criterio}")).ToList();
+                    ListaClientes = ListaClientes.Where(c => true).OrderBy(c => c.Telefono).ToList();
+                }
+                break;
+            case "4"://NombreUsuario
+                if (Criterio.Trim().Length > 0)
+                {
+                    ListaClientes = (await Http.GetFromJsonAsync<Clientes[]>($"http://localhost:5000/Api/Clientes/{Criterio}")).ToList();
+                    ListaClientes = ListaClientes.Where(c => c.NombreUsuario.Contains(Criterio)).ToList();
+                }
+                else
+                {
+                    ListaClientes = (await Http.GetFromJsonAsync<Clientes[]>($"http://localhost:5000/Api/Clientes/{Criterio}")).ToList();
+                    ListaClientes = ListaClientes.Where(c => true).OrderBy(c => c.NombreUsuario).ToList();
+                }
+                break;
+            case "5"://Correo
+                if (Criterio.Trim().Length > 0)
+                {
+                    ListaClientes = (await Http.GetFromJsonAsync<Clientes[]>($"http://localhost:5000/Api/Clientes/{Criterio}")).ToList();
+                    ListaClientes = ListaClientes.Where(c => c.Correo.Contains(Criterio)).ToList();
+                }
+                else
+                {
+                    ListaClientes = (await Http.GetFromJsonAsync<Clientes[]>($"http://localhost:5000/Api/Clientes/{Criterio}")).ToList();
+                    ListaClientes = ListaClientes.Where(c => true).OrderBy(c => c.Correo).ToList();
                 }
                 break;
         }
-
-        //int id;
-        //int.TryParse(Criterio, out id);
-
-        ListaClientes = (await Http.GetFromJsonAsync<Clientes[]>($"http://localhost:5000/Api/Clientes")).ToList();
     }
 }
