--- a/SweetDreams/SweetDreams.Client/Pages/Registros Clientes/RegistroCliente.razor
+++ b/SweetDreams/SweetDreams.Client/Pages/Registros Clientes/RegistroCliente.razor
@@ -1,11 +1,12 @@
 ﻿@page "/RegistroCliente"
 
 @using Models
+@using Pages
 @using System.IO
 @using System.Net.Http
 
 @inject HttpClient Http
-@*@inject IToastService toast*@
+@inject IToastService toast
 
 <EditForm Model="cliente">
     <DataAnnotationsValidator />
@@ -16,20 +17,6 @@
         <div class="card-body">
             <form>
 
-                @*ClienteId
-                <div class="form-row align-items-center">
-                    <div class="col">
-                        <div class="form-group">
-                            <label>Cliente ID:</label>
-                            <div class="input-group">
-                                <InputNumber @bind-Value="cliente.ClienteId" class="form-control col-4" />
-                                <div class="input-group-append">
-                                    <button type="button" class="btn btn-primary input-group-text" @onclick="Buscar"><i class="oi oi-magnifying-glass" />Buscar</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>*@
 
                 @*Nombre*@
                 <div class="form-group">
@@ -60,11 +47,16 @@
                     <label>Contraseña:</label>
                     <InputText @bind-Value="cliente.Clave" class="form-control" />
                 </div>
+
+                <div class="form-group">
+                    <label>Confirmar contraseña:</label>
+                    <InputText @bind-Value="Confirmar" class="form-control" />
+                </div>
+
             </form>
         </div>
         <div class="card-footer">
             <div class="form-group text-center" display: inline-block>
-                <button type="button" class="btn btn-lg btn-primary oi oi-file" @onclick="Nuevo"> Nuevo</button>
                 <button type="submit" class="btn btn-lg btn-success oi oi-cloud-upload" @onclick="Registrarse"> Guardar</button>
                 <button type="button" class="btn btn-lg btn-danger oi oi-trash" @onclick="Cancelar"> Eliminar</button>
             </div>
@@ -73,38 +65,69 @@
 </EditForm>
 
 @code {
+
+    [Parameter]
+    public int Id { get; set; }
+
     private Cliente cliente = new Cliente();
+    public string Confirmar { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        Nuevo();
+        await BuscarParametro();
+    }
+
+    private async Task BuscarParametro()
+    {
+
+        if (Id > 0)
+        {
+            var respuesta = await Http.GetFromJsonAsync<Cliente>($"http://localhost:5000/Api/Clientes/{Id}");
+
+            if (respuesta != null)
+            {
+                cliente = respuesta;
+            }
+            else
+                toast.ShowError("No encontrado");
+        }
+
+    }
 
     private void Nuevo()
     {
         this.cliente = new Cliente();
+        Confirmar = string.Empty;
     }
 
-    private void Registrarse()
+    private async Task Registrarse()
     {
+        if (cliente.Clave == Confirmar)
+        {
+            var guardado = await Http.PostAsJsonAsync("http://localhost:5000/Api/Clientes", cliente);
 
-        //var estado = await guardado.Content.ReadFromJsonAsync<bool>();
+            var estado = await guardado.Content.ReadFromJsonAsync<bool>();
 
-        //if (estado)
-        //{
-        //    toast.ShowSuccess("Guardado correctamente");
-        //    Nuevo();
-        //}
-        //else
-        //    toast.ShowError("Guardado incorrecto");
+
+            if (estado)
+            {
+                toast.ShowSuccess("Se ha registrado correctamente");
+                Nuevo();
+            }
+            else
+                toast.ShowError("No se ha podido registrar");
+        }
+        else
+        {
+            toast.ShowWarning("Las claves no coinciden");
+            Confirmar = string.Empty;
+        }
 
     }
 
     private void Cancelar()
     {
-
-        //var estado =  /*await respuesta.Content.ReadFromJsonAsync<bool>()*/;
-
-        //if (estado)
-        //{
-        //    toast.ShowSuccess("Cancelado correctamente");
-        //    Nuevo();
-        //}
-
+       
     }
 }
