Arreglo en el registro cliente

--- a/SweetDreams/SweetDreams.Client/Pages/Index.razor
+++ b/SweetDreams/SweetDreams.Client/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Bienvenido</h1>
 
-Welcome to your new app.
+Bienvenido a la interfaz cliente del hotel SweetDreams!
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
