--- a/SweetDreams/SweetDreams.Client/Shared/MainLayout.razor
+++ b/SweetDreams/SweetDreams.Client/Shared/MainLayout.razor
@@ -2,19 +2,16 @@
 
 <BlazoredToasts />
 
-<div class="sidebar">
-    <NavMenu />
-</div>
 
 <div class="main">
-    <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+    <div class="top">
+        <NavMenu />
     </div>
 
-    <div class="content px-4">
+    <div class="content">
         @Body
     </div>
-
 </div>
+
 
 
